libs/@local/hashql/hir/tests/ui/lower/specialization/bits.jsonc
//@ run: fail
//@ description: bitwise operations are not implemented yet
["<<", { "#literal": 1 }, { "#literal": 2 }]
//~^ ERROR intrinsic `::core::bits::shl` not supported yet
